--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(background.jpg);
+    background-image: url(imagens/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     font-family: Arial, sans-serif;
